WIP: adding proxy support on OCP

--- a/assembly/assembly-wsmaster-war/src/main/webapp/WEB-INF/classes/che/che.properties
+++ b/assembly/assembly-wsmaster-war/src/main/webapp/WEB-INF/classes/che/che.properties
@@ -34,9 +34,9 @@ che.workspace.projects.storage=/projects
 che.workspace.logs.root_dir=/workspace_logs
 
 # Configures proxies used by runtimes powering workspaces
-che.workspace.http_proxy=
-che.workspace.https_proxy=
-che.workspace.no_proxy=
+che.workspace.http_proxy=${CHE_HTTP_PROXY}
+che.workspace.https_proxy=${CHE_HTTPS_PROXY}
+che.workspace.no_proxy=${CHE_NO_PROXY}
 
 # Configures dns resolving servers. May contain several values separated by comma sign.
 che.dns.resolvers=
